--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "155d5612-ecb9-4d8d-b277-6d20304ae685"
+      "id": "c0f11c8a-2ded-4c8f-94a9-5a340bc8f72d"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "09d88511-aa65-4b98-a56a-fb047132fb0c"
+      "id": "7e13d874-f6a4-4783-bfdb-7542edcd2c9a"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "8b1ca129-9674-4e1b-b07b-7540c99b9626"
+      "id": "7cd480c5-bda0-4284-a245-e548e0b774d3"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "da9ee50a-13b0-4d90-809b-42a785cbe0da"
+      "id": "49fa49a2-4511-413b-af72-c921151d5b02"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "6d3242af-51d4-405f-a1c9-13e5a573d44f"
+      "id": "fdf6fa0e-ddcf-499d-b6d3-edf49c1d8941"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "09ab3ed1-84a7-46b6-a09f-7b3fc27e22dc"
+      "id": "4126554c-593b-4cd7-9a3a-708a3397e9ca"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "85d70287-6ec6-42ce-94c1-0d829545e040"
+      "id": "69e235dd-c584-49f2-ad9b-f27ab2ae14fe"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "91d3efcd-5c6c-4b9b-b83c-90fd9339f2bc"
+      "id": "b8f82893-7d5c-4843-a88f-a2be6f97c56d"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "738685b5-7fe8-4a21-9c08-c19ed884f61b"
+      "id": "6fc77bb8-5735-4b4b-ad57-38f4ddfdb7ee"
     },
     {
       "cell_type": "code",
@@ -385,11 +385,22 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
+        "    v_{11} & v_{12}  \\\\\n",
+        "    v_{21} & v_{22}  \\\\\n",
+        "    \\dots & \\dots  \\\\\n",
+        "    v_{n1} & v_{n2}  \\\\\n",
+        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
+        "    \\begin{bmatrix}\n",
+        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
+        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
+        "    \\dots \\\\\n",
+        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
+        "    \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "503df10a-8d18-4a8f-8a4f-1ac5593d1f0b"
+      "id": "84aa2108-0b12-407f-92cb-3fa68e777702"
     },
     {
       "cell_type": "code",
@@ -412,7 +423,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "4e0d416c-97c3-4a76-8ee6-4e1be0e2ef3e"
+      "id": "50780572-fb9f-41f4-b22a-907e9387acab"
     },
     {
       "cell_type": "code",
@@ -467,7 +478,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "d7d96717-391e-441a-834e-d6908d68e493"
+      "id": "d610434f-fa49-474c-b603-23fde2395370"
     },
     {
       "cell_type": "code",
@@ -514,7 +525,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "e53c6438-9d21-440c-9ef0-239e45eed83b"
+      "id": "269519e5-2cba-409b-b833-f675a5cea397"
     },
     {
       "cell_type": "code",
@@ -553,7 +564,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "15c0d44e-fab8-4d04-816a-5d9b2182d7c5"
+      "id": "fb8f991e-e1b6-4411-a416-08857d6b72f4"
     },
     {
       "cell_type": "code",
@@ -622,7 +633,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "fb6ee114-1824-4049-aaac-c01c88127d81"
+      "id": "03527f5e-a645-45b6-883e-26db2f765cff"
     },
     {
       "cell_type": "code",
@@ -687,7 +698,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "c13d8c29-5bdc-4847-b190-2baa744e93d9"
+      "id": "4f5ed688-0352-434f-9e18-0a5219a063ef"
     },
     {
       "cell_type": "code",
