--- a/docs/posts/10wk-2.out.ipynb
+++ b/docs/posts/10wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "96515da1-5b08-46a7-98c6-bf2d3324bf87"
+      "id": "0d228886-960e-4d12-9ed5-170893ae17c0"
     },
     {
       "cell_type": "code",
@@ -41,7 +41,7 @@
         "\n",
         "`-` 주어진 자료가 아래와 같다고 하자."
       ],
-      "id": "d430bb57-5e47-462b-b116-12f692cafc6a"
+      "id": "636db6fa-9aa9-40e0-a134-bd529b441b5c"
     },
     {
       "cell_type": "code",
@@ -87,7 +87,7 @@
       "source": [
         "`-` 문제1: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "8143251e-f6cf-4b50-a333-6fe737fe26e0"
+      "id": "3c1a0fba-5473-40b3-b1ce-00a30306562e"
     },
     {
       "cell_type": "code",
@@ -129,7 +129,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "0a11bdc8-3335-4fe2-b9f4-792dd5830690"
+      "id": "b8bfb031-a910-42ed-b4db-f07c698c4d1b"
     },
     {
       "cell_type": "code",
@@ -183,7 +183,7 @@
       "source": [
         "`-` 문제2: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "1f7d5792-ac3b-4f63-8020-e0ab30f758a8"
+      "id": "434176fd-a5f0-4dc8-ac35-ff9eda318ffb"
     },
     {
       "cell_type": "code",
@@ -226,7 +226,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "b46eaffd-0d00-4393-b24a-a64caea1ecf7"
+      "id": "cd374a46-4c2d-4d5e-9808-87c523b263af"
     },
     {
       "cell_type": "code",
@@ -286,7 +286,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "e3acbb07-b46e-4678-8e75-57e793972c1f"
+      "id": "9cd46934-9f54-469d-a6b0-a8a4006929f3"
     },
     {
       "cell_type": "code",
@@ -339,7 +339,7 @@
         "옥순의I성향$\\times$영식의I성향 $+$ 옥순의N성향$\\times$영식의N성향 $+$\n",
         "옥순의매력 $+$ 영식의매력"
       ],
-      "id": "e8717af2-d2ce-4c0b-b6dc-45aa90b4b56c"
+      "id": "3327737c-1a19-4b2e-a942-92e75c93d7ac"
     },
     {
       "cell_type": "code",
@@ -365,7 +365,7 @@
         "**(2)** 영자(IN)와 다호(ES)의 궁합 $\\approx$ 영자I성향$\\times$다호I성향\n",
         "$+$ 영자N성향$\\times$다호의N성향 $+$ 영자의매력 $+$ 다호의매력"
       ],
-      "id": "c76a164e-9f3d-4a6a-a369-027ca99831b1"
+      "id": "425a0202-e034-47de-91c1-1a701e83bac3"
     },
     {
       "cell_type": "code",
@@ -391,7 +391,7 @@
         "**(3)** 하니(I)와 영호(IS)의 궁합 $\\approx$ 하니I성향$\\times$영호I성향\n",
         "$+$ 하니N성향$\\times$영호의N성향 $+$ 하니의매력 $+$ 영호의매력"
       ],
-      "id": "5778da8a-c7d0-4b08-997c-b0fb89d92397"
+      "id": "cf2e3b95-113d-40d6-945b-ef6e2df11b1d"
     },
     {
       "cell_type": "code",
@@ -418,7 +418,7 @@
         "\n",
         "`-` 전체 사용자의 설정값"
       ],
-      "id": "a36a21ec-780e-4988-9eca-5e6efa4a6be1"
+      "id": "bb1c1cc1-7681-4754-b4fb-7c2b1f531f98"
     },
     {
       "cell_type": "code",
@@ -471,7 +471,7 @@
       "source": [
         "`-` 아래의 행렬곱 관찰"
       ],
-      "id": "5364a3e3-ae1c-46e8-b6cd-1734f4b5e0d6"
+      "id": "f86cb9fb-c2bc-4262-8649-c13d85280693"
     },
     {
       "cell_type": "code",
@@ -491,15 +491,71 @@
       "source": [
         "—저거 따져보자—\n",
         "\n",
-        "${\\bf W} = \\begin{bmatrix} 1.2200 & 0.4900 \\\\ 1.1700 & 0.4400 \\\\ 1.2100 & -0.4500 \\\\ 1.2000 & -0.5000 \\\\ -1.2000 & 0.5100 \\\\ -1.2300 & 0.4800 \\\\ -1.2000 & -0.4800 \\\\ -1.1900 & -0.4900 \\\\ 0.2000 & 0.0000 \\end{bmatrix}$\n",
+        "${\\bf W} = \\begin{bmatrix}\n",
+        "1.2200 & 0.4900 \\\\\n",
+        "1.1700 & 0.4400 \\\\\n",
+        "1.2100 & -0.4500 \\\\\n",
+        "1.2000 & -0.5000 \\\\\n",
+        "-1.2000 & 0.5100 \\\\\n",
+        "-1.2300 & 0.4800 \\\\\n",
+        "-1.2000 & -0.4800 \\\\\n",
+        "-1.1900 & -0.4900 \\\\\n",
+        "0.2000 & 0.0000\n",
+        "\\end{bmatrix}$\n",
         "\n",
-        "${\\bf M}^\\top = \\begin{bmatrix} 1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\ 0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000 \\end{bmatrix}$\n",
+        "${\\bf M}^\\top = \\begin{bmatrix}\n",
+        "1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\\n",
+        "0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000\n",
+        "\\end{bmatrix}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix} 1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\ 1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\ 1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\ 1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\ -1.1850 & -1.2345 & -1.8330 & -1.7580 & 1.8420 & 1.7430 & 1.1850 & 1.1580 \\\\ -1.2360 & -1.2846 & -1.8489 & -1.7763 & 1.8624 & 1.7652 & 1.2360 & 1.2126 \\\\ -1.6800 & -1.6800 & -1.1400 & -1.1640 & 1.2480 & 1.2480 & 1.6800 & 1.7520 \\\\ -1.6730 & -1.6723 & -1.1207 & -1.1459 & 1.2292 & 1.2306 & 1.6730 & 1.7458 \\\\ 0.2400 & 0.2440 & 0.2460 & 0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440 \\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix}\n",
+        "1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\\n",
+        "1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\\n",
+        "1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\\n",
+        "1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\\n",
+        "-1.1850 & -1.2345 & -1.8330 & -1.7580 &  1.8420 &  1.7430 &  1.1850 &  1.1580 \\\\\n",
+        "-1.2360 & -1.2846 & -1.8489 & -1.7763 &  1.8624 &  1.7652 &  1.2360 &  1.2126 \\\\\n",
+        "-1.6800 & -1.6800 & -1.1400 & -1.1640 &  1.2480 &  1.2480 &  1.6800 &  1.7520 \\\\\n",
+        "-1.6730 & -1.6723 & -1.1207 & -1.1459 &  1.2292 &  1.2306 &  1.6730 &  1.7458 \\\\\n",
+        "0.2400 &  0.2440 &  0.2460 &  0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440\n",
+        "\\end{bmatrix}$\n",
         "\n",
-        "$\\begin{align*} bias =~& \\begin{bmatrix} 1.2100 \\\\ 1.2500 \\\\ 1.1000 \\\\ 1.1100 \\\\ 1.1200 \\\\ 1.1300 \\\\ 1.1400 \\\\ 1.1200 \\\\ 3.6000 \\end{bmatrix} +\\begin{bmatrix} 1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500 \\end{bmatrix}\\\\ \\\\ =~& \\begin{bmatrix} 2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\ 2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\ 2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\ 2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\ 2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500 \\end{bmatrix} \\end{align*}$\n",
+        "$\\begin{align*} bias =~& \\begin{bmatrix}\n",
+        "1.2100 \\\\\n",
+        "1.2500 \\\\\n",
+        "1.1000 \\\\\n",
+        "1.1100 \\\\\n",
+        "1.1200 \\\\\n",
+        "1.1300 \\\\\n",
+        "1.1400 \\\\\n",
+        "1.1200 \\\\\n",
+        "3.6000\n",
+        "\\end{bmatrix} +\\begin{bmatrix}\n",
+        "1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500\n",
+        "\\end{bmatrix}\\\\ \\\\\n",
+        "=~& \\begin{bmatrix}\n",
+        "2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\\n",
+        "2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\\n",
+        "2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\\n",
+        "2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\\n",
+        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
+        "2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\\n",
+        "2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\\n",
+        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
+        "4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500\n",
+        "\\end{bmatrix} \\end{align*}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix} 4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\ 4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\ 3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\ 3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\ 1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\ 1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\ 0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\ 0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\ 5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060 \\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix}\n",
+        "4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\\n",
+        "4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\\n",
+        "3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\\n",
+        "3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\\n",
+        "1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\\n",
+        "1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\\n",
+        "0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\\n",
+        "0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\\n",
+        "5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060\n",
+        "\\end{bmatrix}$\n",
         "\n",
         "`-` ${\\bf W} @ {\\bf M}^\\top + bias$ 의 (1,1)의 원소값을 계산해보면\n",
         "아래와 같다.\n",
@@ -516,7 +572,7 @@
         "\n",
         "`-` 주어진 자료와 우리가 임의로 만든 궁합매트릭스를 비교해보자."
       ],
-      "id": "91ef4768-934a-4093-a9ac-8a4bf951dbdc"
+      "id": "fefa9015-6bb4-404e-8265-4c3322f2ec26"
     },
     {
       "cell_type": "code",
@@ -636,7 +692,7 @@
         "\n",
         "[6] 1.21+1.11 = 2.32"
       ],
-      "id": "a7d8e5dd-2109-42f4-8a75-96e33c26471c"
+      "id": "9dec20b9-7a58-4929-8689-a8200eb41492"
     },
     {
       "cell_type": "code",
@@ -657,7 +713,7 @@
       "source": [
         "`-` 이름을 숫자화"
       ],
-      "id": "c9844e9c-f1d2-4521-9a8d-0388aee018ca"
+      "id": "4328d3be-d2d3-411d-8e95-8dbaefdcb460"
     },
     {
       "cell_type": "code",
@@ -692,7 +748,7 @@
       "source": [
         "`-` 텐서화 + one_hot-인코딩"
       ],
-      "id": "9160b14b-42b3-44f7-9772-76f8641c1c9b"
+      "id": "ca8982f9-9f3a-4a7b-bb3b-ccb25481ad57"
     },
     {
       "cell_type": "code",
@@ -744,7 +800,7 @@
         "`-` `X1` -\\> `여성특징`, `X1` -\\> `여성bias`, `X2` -\\> `남성특징`, `X2`\n",
         "-\\> `남성bias` 구현"
       ],
-      "id": "43aab5d3-3ed7-4cab-9fb4-32c082bf314e"
+      "id": "a1abc729-94e2-45ca-972b-6fd039c08eee"
     },
     {
       "cell_type": "code",
@@ -769,7 +825,7 @@
         "\n",
         "`-` step1: yhat을 구하자."
       ],
-      "id": "415db9d1-5078-45f5-8597-250352544aaa"
+      "id": "aedf913a-1924-4ec0-93ca-05502695d464"
     },
     {
       "cell_type": "code",
@@ -811,7 +867,7 @@
       "source": [
         "`-` step2: 손실계산"
       ],
-      "id": "c76ceda1-d322-4474-b703-9ae4e60aff46"
+      "id": "b97ae549-fe49-402b-a992-44292dc4d51a"
     },
     {
       "cell_type": "code",
@@ -834,7 +890,7 @@
         "\n",
         "(미분전)"
       ],
-      "id": "0eddd6a5-d91f-4dca-a731-c12a8e8d7dcc"
+      "id": "c14f89b5-e6bd-4683-99d2-4ab1357c2604"
     },
     {
       "cell_type": "code",
@@ -866,7 +922,7 @@
       "source": [
         "(미분)"
       ],
-      "id": "b406ae7d-3761-42f3-ad3b-80669b451b07"
+      "id": "f3103926-8d3f-49c8-b8ad-f5d0500ac8b7"
     },
     {
       "cell_type": "code",
@@ -886,7 +942,7 @@
       "source": [
         "(미분후)"
       ],
-      "id": "adff60a5-6fb1-4f05-acce-c86d8d4c9d0a"
+      "id": "cea46c83-10b3-4c29-97f1-d629311d0c2b"
     },
     {
       "cell_type": "code",
@@ -920,7 +976,7 @@
         "\n",
         "(옵티마이저 선언)"
       ],
-      "id": "3e1f3c88-1f34-4309-9787-47bf4422085e"
+      "id": "1d125be2-f9a7-47a0-aac1-7cd0e84ef96a"
     },
     {
       "cell_type": "code",
@@ -941,7 +997,7 @@
       "source": [
         "(update전)"
       ],
-      "id": "8bbfcaaf-6d65-4771-b4ed-e354028462c4"
+      "id": "d6d8f486-89ae-48ba-8f97-67314fab7e51"
     },
     {
       "cell_type": "code",
@@ -973,7 +1029,7 @@
       "source": [
         "(update)"
       ],
-      "id": "36893447-a978-427c-add3-8bbb97a554e1"
+      "id": "7ffe471d-c0e4-409e-b61c-3de1e8224596"
     },
     {
       "cell_type": "code",
@@ -993,7 +1049,7 @@
       "source": [
         "(update후)"
       ],
-      "id": "b8f8e589-2166-43aa-b35c-d6cbaf0b23e9"
+      "id": "6ee64a63-64db-4af3-9b4d-ebffb56f0a02"
     },
     {
       "cell_type": "code",
@@ -1025,7 +1081,7 @@
       "source": [
         "(zero_grad)"
       ],
-      "id": "129765d6-baa3-4bbe-a55d-a586214f9318"
+      "id": "20f6e680-65c6-4d62-b4a2-d44eac803b95"
     },
     {
       "cell_type": "code",
@@ -1045,7 +1101,7 @@
       "source": [
         "(zero_grad후)"
       ],
-      "id": "f85ad12d-7f92-4cb7-ab41-dcead7533559"
+      "id": "3294307e-568d-4e5c-b568-7ca5c00a4700"
     },
     {
       "cell_type": "code",
@@ -1077,7 +1133,7 @@
       "source": [
         "## E. 코드정리"
       ],
-      "id": "4065f220-408d-4138-9444-919d3ce7aaef"
+      "id": "5669d21a-e7c0-42c2-8ab7-e79dba46595b"
     },
     {
       "cell_type": "code",
@@ -1143,7 +1199,7 @@
       "source": [
         "## F. 모형의 해석 – 쉬운경우"
       ],
-      "id": "1f2ea07b-27cd-4939-a8e8-102640c1728e"
+      "id": "f9757fc2-6372-414b-ac58-5fa453a9fee0"
     },
     {
       "cell_type": "code",
@@ -1180,7 +1236,7 @@
         "\n",
         "`-` 적합을 시켜보자."
       ],
-      "id": "78a2a86f-b444-4ac2-bb0d-0142036d9b0b"
+      "id": "cb1d8dae-eee3-4839-8a4b-6725d35cc29b"
     },
     {
       "cell_type": "code",
@@ -1234,7 +1290,7 @@
       "source": [
         "`-` 잘 맞추는듯"
       ],
-      "id": "ca00abed-cb8f-48e7-b6d6-5aa31dd6c352"
+      "id": "d7c178d1-8473-4106-9da7-7db87f7a7e29"
     },
     {
       "cell_type": "code",
@@ -1254,7 +1310,7 @@
       "source": [
         "`-` 해석을 해보자."
       ],
-      "id": "7e973543-b74e-451d-8c78-687827cb9473"
+      "id": "c36e7a7f-e77e-45fc-83e4-799f858060cd"
     },
     {
       "cell_type": "code",
@@ -1294,7 +1350,7 @@
         "-   궁합2: (IN, IN) = 1.4 // (IN, IS) = 0.4 // (IN, EN) = -0.4 // (IN,\n",
         "    ES) = -1.4"
       ],
-      "id": "b41b90fa-e54c-4c18-a9a9-8e2fe1c52c3b"
+      "id": "4665eb17-9c6a-4392-8216-ef5769bc3197"
     },
     {
       "cell_type": "code",
@@ -1318,7 +1374,7 @@
         "\n",
         "아래의 코드를 활용하여 net를 적합시켜라."
       ],
-      "id": "81dbe2ff-b318-456f-aac6-6a4b6482666e"
+      "id": "bdbdc964-eab4-4db5-b48b-e8d3625971a9"
     },
     {
       "cell_type": "code",
@@ -1372,7 +1428,7 @@
       "source": [
         "적합된 네트워크를 바탕으로 아래의 값에 대한 예측을 수행하라."
       ],
-      "id": "bf249871-9e5d-4872-93ea-141a26167dce"
+      "id": "6468a2f7-d88b-4c05-b012-b71a29a501e2"
     },
     {
       "cell_type": "code",
@@ -1393,7 +1449,7 @@
       "source": [
         "**hint** 답은 아래와 같다."
       ],
-      "id": "9b3584fe-c1c4-475a-8b60-ec1457a3cea0"
+      "id": "cd15ef31-9d82-4f63-8684-62ddb12e41bd"
     },
     {
       "cell_type": "code",
