--- a/docs/posts/14wk-1.out.ipynb
+++ b/docs/posts/14wk-1.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "e69b5429-420b-48a1-a6a6-c432185dd14e"
+      "id": "a68d31cd-790c-42f0-8c0e-b4adfbf20d38"
     },
     {
       "cell_type": "code",
@@ -63,7 +63,7 @@
         "\n",
         "`-` 예시1"
       ],
-      "id": "2f9e5500-a2da-4787-80d7-2c20b3ad0baa"
+      "id": "83b8216f-f46c-4dea-8036-65ee186beb20"
     },
     {
       "cell_type": "code",
@@ -120,7 +120,7 @@
       "source": [
         "`-` 예시2"
       ],
-      "id": "aa9f72ac-b245-4c60-b578-aad497d80d43"
+      "id": "b97942e3-5a7e-4c18-9ffa-59d413cae375"
     },
     {
       "cell_type": "code",
@@ -158,7 +158,7 @@
       "source": [
         "np.array([0,1]) in state_space"
       ],
-      "id": "1c69dcfd"
+      "id": "202a5afa"
     },
     {
       "cell_type": "code",
@@ -191,7 +191,7 @@
       "source": [
         "## B. 시각화"
       ],
-      "id": "4bc2ba6b-3db2-4e3f-aa8c-69c12432bbcf"
+      "id": "c56c8937-b6b7-4955-94e5-0eb2ed50d5cc"
     },
     {
       "cell_type": "code",
@@ -247,7 +247,7 @@
       "source": [
         "# 5. Env 클래스 구현"
       ],
-      "id": "bdf1103f-4f3d-4419-a3c6-f352d2057171"
+      "id": "271a9377-b44d-4cd4-afc8-e7064afd2f39"
     },
     {
       "cell_type": "code",
@@ -305,12 +305,14 @@
       "source": [
         "`-` Class 구현: 아래와 같은 느낌의 클래스를 구현해보자."
       ],
-      "id": "008abb6f-6dce-4d47-b452-5bd38cedf503"
+      "id": "af11778d-17ec-400a-9fc5-88e32234cd47"
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
-      "metadata": {},
+      "execution_count": 236,
+      "metadata": {
+        "tags": []
+      },
       "outputs": [],
       "source": [
         "class GridWorld:\n",
@@ -324,18 +326,21 @@
         "            3 : np.array([0, -1]) # col-, left\n",
         "        }\n",
         "        self.reset()\n",
+        "        self.state = None \n",
+        "        self.reward = None \n",
+        "        self.termiated = None\n",
         "    def step(self,action):\n",
         "        direction = self._action_to_direction[action]\n",
         "        self.state = self.state + direction\n",
         "        if np.array_equal(self.state,np.array([3,3])): \n",
-        "            reward = 100 \n",
+        "            self.reward = 100 \n",
         "            self.terminated = True\n",
-        "        elif self.state not in state_space:\n",
-        "            reward = -10\n",
+        "        elif self.state not in self.state_space:\n",
+        "            self.reward = -10\n",
         "            self.terminated = True\n",
         "        else:\n",
-        "            reward = -1 \n",
-        "        return self.state, reward, self.terminated\n",
+        "            self.reward = -1 \n",
+        "        return self.state, self.reward, self.terminated\n",
         "    def reset(self):\n",
         "        self.state = np.array([0,0])\n",
         "        self.terminated = False   \n",
@@ -389,7 +394,7 @@
         "-   `.save_experience()`: 데이터를 저장 –\\> 여기에 일단 초점을 맞추자\n",
         "-   `.learn()`: 데이터로에서 학습 –\\> 패스"
       ],
-      "id": "2c6c6e8d-cb95-499f-9e39-207aba7b180f"
+      "id": "614f23e6-1c6b-4bd0-9556-cd11a38d9bc8"
     },
     {
       "cell_type": "code",
@@ -441,7 +446,7 @@
       "source": [
         "## B. 환경과 상호작용"
       ],
-      "id": "f9f6d604-f3f3-410b-beae-d89a2d5cda98"
+      "id": "89f810a1-ef8c-43de-96d8-aa68fbe631f4"
     },
     {
       "cell_type": "code",
@@ -534,7 +539,7 @@
         "        f\"경험수: {agent.n_experiences}\"\n",
         "    )"
       ],
-      "id": "fe0a3229"
+      "id": "50846003"
     },
     {
       "cell_type": "markdown",
@@ -542,7 +547,7 @@
       "source": [
         "## C. 상호작용결과 시각화"
       ],
-      "id": "1e602973-dcaf-4a8b-829d-6a60517f38a7"
+      "id": "702561a7-c993-407e-b91c-0927f5d0a4d8"
     },
     {
       "cell_type": "code",
@@ -552,7 +557,7 @@
       "source": [
         "[np.array([0,0])] + agent.next_states[28:38] # 에피소드10"
       ],
-      "id": "65b48bd3"
+      "id": "c5604215"
     },
     {
       "cell_type": "code",
@@ -562,7 +567,7 @@
       "source": [
         "show([np.array([0,0])] + agent.next_states[28:38]) # 에피소드5"
       ],
-      "id": "b271f462"
+      "id": "9b695ca7"
     }
   ],
   "nbformat": 4,
