--- a/posts/15wk-1.ipynb
+++ b/posts/15wk-1.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"15wk-1: 강화학습 (3) -- LunarLander\"\n",
+    "title: \"15wk-1: 강화학습 (4) -- LunarLander\"\n",
     "author: \"최규빈\"\n",
     "date: \"06/10/2024\"\n",
-    "draft: true\n",
+    "draft: flase\n",
     "---"
    ]
   },
