--- a/docs/posts/04wk-2.out.ipynb
+++ b/docs/posts/04wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "0d669caf-7e7f-43db-98da-317e27a65dc2"
+      "id": "7c7a4275-9b91-4f88-97d9-176b5defb965"
     },
     {
       "cell_type": "code",
@@ -63,7 +63,7 @@
         "model: $y_i = (0\\times x_i) + \\epsilon_i$, where\n",
         "$\\epsilon_i \\sim N(0,0.01^2)$"
       ],
-      "id": "02f68353-33e0-4f7c-898d-6e15a0dc14c4"
+      "id": "363ec1f9-524b-4cab-bed8-50c893ca5fe2"
     },
     {
       "cell_type": "code",
@@ -95,7 +95,7 @@
         "-   y는 그냥 정규분포에서 생성한 오차이므로 $X \\to y$ 로 향하는\n",
         "    규칙따위는 없음"
       ],
-      "id": "2ac1e2d9-80f5-494a-a431-99c1f24242c0"
+      "id": "0a5278c3-621c-4655-abd7-65fa2011ce4f"
     },
     {
       "cell_type": "code",
@@ -158,7 +158,7 @@
         "\n",
         "`-` 데이터의 분리하여 보자."
       ],
-      "id": "83a10b48-34f7-4155-88c2-37a522921e30"
+      "id": "8e6ce216-e59a-4e34-9e21-fd56ba1c4304"
     },
     {
       "cell_type": "code",
@@ -195,7 +195,7 @@
       "source": [
         "`-` train만 학습"
       ],
-      "id": "d8c4d6cd-cf89-4fc7-bda9-f8071221d292"
+      "id": "9dc12b3f-c1bf-4437-b0db-62e0bbce2e83"
     },
     {
       "cell_type": "code",
@@ -232,7 +232,7 @@
       "source": [
         "`-` training data로 학습한 net를 training data 에 적용"
       ],
-      "id": "f70c31dc-ca3e-4c50-a862-5b14c1cc39e5"
+      "id": "e5cacc15-d958-4ea6-b276-1615b9d21dec"
     },
     {
       "cell_type": "code",
@@ -265,7 +265,7 @@
         "\n",
         "`-` training data로 학습한 net를 test data 에 적용"
       ],
-      "id": "35e41751-70bd-46fc-a067-5e6f6d21cd29"
+      "id": "bf872239-02d8-4d44-bb08-4b39a9216207"
     },
     {
       "cell_type": "code",
@@ -345,7 +345,7 @@
         "[1] 여기에서 우수하다는 말은 여러의미가 있어요, 오버피팅이 없는\n",
         "신경망이라든가, 경제적인 신경망이라든가.."
       ],
-      "id": "ce469966-003d-48eb-b102-1d1146942305"
+      "id": "410fd5db-b0c7-4a82-905e-2ec10aeb1947"
     },
     {
       "cell_type": "code",
@@ -382,7 +382,7 @@
       "source": [
         "`-` 학습"
       ],
-      "id": "ae646690-16fa-4fad-bd22-dcbc8ba33121"
+      "id": "907b3863-65bb-4ff5-b3e0-28c30254ef86"
     },
     {
       "cell_type": "code",
@@ -421,7 +421,7 @@
       "source": [
         "`-` 결과시각화 (잘못된 사용)"
       ],
-      "id": "fed4e0a8-3a7c-4a89-9ca3-3fc1ece07c78"
+      "id": "ab680e17-167a-4392-a7f6-c022432ad39d"
     },
     {
       "cell_type": "code",
@@ -456,7 +456,7 @@
         "\n",
         "`-` 결과시각화 (올바른 사용)"
       ],
-      "id": "b179784e-7d37-4f05-8618-5207fe5088f8"
+      "id": "c40aaef9-50b9-4652-be1f-8f02c2dd64fd"
     },
     {
       "cell_type": "code",
@@ -515,7 +515,7 @@
         "\n",
         "## B. 드랍아웃 레이어"
       ],
-      "id": "e743979c-7659-472c-9704-a76cc045e25c"
+      "id": "6dec88f0-55b4-4f19-a037-ce5a8b10e7cf"
     },
     {
       "cell_type": "code",
@@ -573,7 +573,7 @@
         "\n",
         "`-` ReLU + dropout의 특이한 성질"
       ],
-      "id": "f7e36f81-1ad2-4f62-9a7f-72f6a9abb5ee"
+      "id": "9a4a33cc-78cc-4c48-8987-b6febda5578c"
     },
     {
       "cell_type": "code",
@@ -694,7 +694,7 @@
         "“선형변환+비선형변환”이 반복되는 구조이다. “선형변환+비선형변환”을\n",
         "하나의 세트로 보면 아래와 같이 표현할 수 있다.\n",
         "\n",
-        "-   $\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\left( \\underset{(n,2)}{\\boldsymbol u^{(1)}} \\overset{relu}{\\to} \\underset{(n,2)}{\\boldsymbol v^{(1)}} \\right) \\overset{l_2}{\\to} \\left(\\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{sig}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}\\right), \\quad \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{net({\\bf X})}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$\n",
+        "-   $\\underset{(n,1)}{\\bf X}  \\overset{l_1}{\\to} \\left( \\underset{(n,2)}{\\boldsymbol u^{(1)}} \\overset{relu}{\\to} \\underset{(n,2)}{\\boldsymbol v^{(1)}} \\right) \\overset{l_2}{\\to} \\left(\\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{sig}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}\\right), \\quad  \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{net({\\bf X})}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$\n",
         "\n",
         "이것을 다이어그램으로 표현한다면 아래와 같다.\n",
         "\n",
@@ -855,7 +855,7 @@
         "\n",
         "아래의 아키텍처를 가지는 네트워크를 파이토치코드로 선언하라.\n",
         "\n",
-        "<figure>\n",
+        "<figure class=\"margin-caption\">\n",
         "<img\n",
         "src=\"https://d2908q01vomqb2.cloudfront.net/f1f836cb4ea6efb2a0b1b99f41ad8b103eff4b59/2017/10/06/intro-gluon-1.gif\"\n",
         "alt=\"출처: https://aws.amazon.com/ko/what-is/deep-learning/\" />\n",
@@ -864,7 +864,7 @@
         "class=\"uri\">https://aws.amazon.com/ko/what-is/deep-learning/</a></figcaption>\n",
         "</figure>"
       ],
-      "id": "2eeb78a2-6491-4677-a6c8-4d617e7a77de"
+      "id": "705c2e46-8305-489d-86ed-3fa51b99da14"
     },
     {
       "cell_type": "code",
@@ -897,7 +897,7 @@
         "and the Theory of Brain Mechanisms*. Vol. 55. Spartan books Washington,\n",
         "DC."
       ],
-      "id": "27978874-d0f0-4144-97ee-583225e494fa"
+      "id": "ede2cd82-fb33-4d98-8d75-9b31aeb07ce3"
     }
   ],
   "nbformat": 4,
